2008-01-26  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-vars.el (c-hanging-braces-alist): new element for
	arglist-cont-nonempty.

	* progmodes/cc-cmds.el (c-brace-newlines): Determine the newlines
	for a brace with syntax arglist-cont-nonempty.
	
	* progmodes/cc-styles.el (c-style-alist): Add elements for
	arglist-cont-nonempty into 5 styles (gnu, ellemtel, linux, python,
	awk).

2008-01-26  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-defs.el (c-save-buffer-state): Bind
	buffer-file-name and buffer-file-truename to nil, to prevent
	primitives generating "buffer is read only" messages.

2008-01-26  Eli Zaretskii  <eliz@gnu.org>

	* progmodes/etags.el (tags-query-replace): Doc fix.

2008-01-26  Phil Sung <psung@mit.edu> (tiny change)

	* wdired.el (wdired-get-filename): Change `(1+ beg)' to `beg' so
	that the filename end is found even when the filename is empty.
	Fixes error and spurious newlines when marking files for deletion.

2008-01-26  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* blank-mode.el: New version 9.1.  Handle "long" line tail
	visualization.  Doc fix.
	(blank-line-length): Renamed to blank-line-column.
	(blank-chars-value-list, blank-toggle-option-alist, blank-help-text):
	Initialization fix.
	(blank-replace-spaces-by-tabs): New fun.
	(blank-cleanup, blank-cleanup-region, blank-color-on): Code fix.

2008-01-25  Juanma Barranquero  <lekktu@gmail.com>

	* allout.el (allout-unload-function): New function.

2008-01-25  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* blank-mode.el: New version 9.0.  New commands to clean up some blank
	problems like trailing blanks.  New faces and regexp for visualizing
	the blank problems.  Doc fix.
	(blank-chars, blank-global-modes, blank-chars-value-list)
	(blank-toggle-option-alist, blank-help-text): Initialization fix.
	(blank-indentation, blank-empty, blank-space-after-tab): New faces.
	(blank-indentation, blank-empty, blank-space-after-tab)
	(blank-indentation-regexp, blank-empty-at-bob-regexp)